added cache related requests
